--- a/templates/user/editPassword.html.twig
+++ b/templates/user/editPassword.html.twig
@@ -2,28 +2,27 @@
 {% block title %}Account Profile
 {% endblock %}
 {% block content %}
-{% block body %}
-	<div class="grix xs4 container">
-		{% for message in app.flashes('error') %}
-			<div class="col-xs4">
-				<div class="p-3 my-2 rounded-2 error">{{message}}</div>
-			</div>
-		{% endfor %}
-		<div class="col-xs4">
-			<h1>Modification du mot de passe de {{ app.user.firstname }} {{ app.user.name }}</h1>
-            <form method="post">
-                <div class="form-field">
-                    <label for="pass">Mot de passe</label>
-                    <input type="password" id="pass" name="pass" class="form-control">
+    {% block body %}
+            {% for message in app.flashes('error') %}
+                <div class="col-xs4">
+                    <div class="p-3 my-2 rounded-2 error">{{message}}</div>
                 </div>
-                <div class="form-field">
-                    <label for="pass2">Confirmer le mot de passe</label>
-                    <input type="password" id="pass2" name="pass2" class="form-control">
-                </div>
-                <button class="btn blue">Valider</button>
+            {% endfor %}
+            <div class="col-xs4">
+                <h1>Modification du mot de passe de {{ app.user.getusername }} </h1>
+                <form method="post">
+                    <div class="form-field">
+                        <label for="pass">Mot de passe</label>
+                        <input type="password" id="pass" name="pass" class="form-control">
+                    </div>
+                    <div class="form-field">
+                        <label for="pass2">Confirmer le mot de passe</label>
+                        <input type="password" id="pass2" name="pass2" class="form-control">
+                    </div>
+                    <button class="btn primary">Valider</button>
+                
+                </form>
+            </div>
             
-            </form>
-		</div>
-        
-	</div>
+    {% endblock %}
 {% endblock %}
