--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -87,7 +87,7 @@
 												<span class="text-danger">*</span>
 											</label>
 											<div class="col-lg-6">
-												{{ form_widget(form.user_username) }}
+												{{ form_widget(form.user_username, {'attr': {'class': 'form-control'}}) }}
 											</div>
 										</div>
 
@@ -96,7 +96,7 @@
 												<span class="text-danger">*</span>
 											</label>
 											<div class="col-lg-6">
-												{{ form_widget(form.email) }}
+												{{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
 											</div>
 										</div>
 
@@ -105,7 +105,7 @@
 												<span class="text-danger">*</span>
 											</label>
 											<div class="col-lg-6">
-												{{ form_widget(form.user_firstname) }}
+												{{ form_widget(form.user_firstname, {'attr': {'class': 'form-control'}}) }}
 											</div>
 										</div>
 
@@ -114,7 +114,7 @@
 												<span class="text-danger">*</span>
 											</label>
 											<div class="col-lg-6">
-												{{ form_widget(form.user_lastname) }}
+												{{ form_widget(form.user_lastname, {'attr': {'class': 'form-control'}}) }}
 											</div>
 										</div>
 									</div>
@@ -125,7 +125,7 @@
 												<span class="text-danger">*</span>
 											</label>
 											<div class="col-lg-6">
-												{{ form_widget(form.user_gender) }}
+												{{ form_widget(form.user_gender, {'attr': {'class': 'form-control'}}) }}
 											</div>
 										</div>
 
@@ -134,7 +134,7 @@
 												<span class="text-danger">*</span>
 											</label>
 											<div class="col-lg-6">
-                                            {{ form_widget(form.user_picture, {'attr': {'placeholder': app.user.getUserPicture}}) }}
+                                            {{ form_widget(form.user_picture, {'attr': {'class': 'form-control'}}) }}
 											</div>
 										</div>
 
@@ -143,7 +143,7 @@
 												<span class="text-danger">*</span>
 											</label>
 											<div class="col-lg-6">
-												{{ form_widget(form.user_birthday) }}
+												{{ form_widget(form.user_birthday, {'attr': {'class': 'form-control'}})  }}
 											</div>
 										</div>
 
@@ -152,7 +152,7 @@
 												<span class="text-danger">*</span>
 											</label>
 											<div class="col-lg-6">
-												{{ form_widget(form.user_phonenumber) }}
+												{{ form_widget(form.user_phonenumber, {'attr': {'class': 'form-control'}}) }}
 
 											</div>
 										</div>
@@ -178,7 +178,7 @@
 												<button type="submit" class="btn btn-success">Apply Changes</button>
 											</div>
                                             <div class="col-lg-8 ml-auto">
-												<a href="{{path('app_user_editpassword')}}">Edit Password</a>
+												<a class="btn btn-danger" href="{{path('app_user_editpassword')}}">Edit Password</a>
 											</div>
 										</div>
 									</div>
