--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -21,18 +21,18 @@
 											{% for flash_error in app.flashes('verify_email_error') %}
 												<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
 											{% endfor %}
-											{{ form_errors(registrationForm) }}
+											
 
-											{{ form_start(registrationForm) }}
+											{{ form_start(registrationForm , { 'attr' : {'novalidate':'novalidate'}}) }}
 												{{ form_row(registrationForm.user_username, {'attr': {'class': 'form-control', 'placeholder': 'Username'}}) }}
 												{{ form_row(registrationForm.email, {'attr': {'class': 'form-control', 'placeholder': 'Email'}}) }}
 												{{ form_row(registrationForm.user_firstname, {'attr': {'class': 'form-control', 'placeholder': 'FirstName'}}) }}
 												{{ form_row(registrationForm.user_lastname, {'attr': {'class': 'form-control', 'placeholder': 'LastName'}}) }}
-												{{ form_row(registrationForm.user_birthday, {'attr': {'class': 'form-control'}}) }}
+												{{ form_row(registrationForm.user_birthday) }}
 												{{ form_row(registrationForm.user_gender, {'attr': {'class': 'form-control'}}) }}
-												{{ form_row(registrationForm.user_picture, {'attr': {'class': 'form-control'}}) }}
+												{{ form_row(registrationForm.user_picture) }}
 												{{ form_row(registrationForm.user_phonenumber, {'attr': {'class': 'form-control', 'placeholder': 'Phone Number'}}) }}
-												{{ form_row(registrationForm.plainPassword, {'label': 'Password', 'attr': {'class': 'form-control'}}) }}
+												{{ form_row(registrationForm.password, {'label': 'Password', 'attr': {'class': 'form-control'}}) }}
 											    {{ form_row(registrationForm.agreeTerms) }}
 
 											<button type="submit" class="btn btn-success btn-block">Register</button>
@@ -52,7 +52,3 @@
 		</div>
 	</body>
 {% endblock %}
-
-
-
-
