--- a/templates/user/editPassword.html.twig
+++ b/templates/user/editPassword.html.twig
@@ -2,7 +2,6 @@
 {% block title %}Account Profile
 {% endblock %}
 {% block content %}
-    {% block body %}
             {% for message in app.flashes('error') %}
                 <div class="col-xs4">
                     <div class="p-3 my-2 rounded-2 error">{{message}}</div>
@@ -19,10 +18,13 @@
                         <label for="pass2">Confirmer le mot de passe</label>
                         <input type="password" id="pass2" name="pass2" class="form-control">
                     </div>
-                    <button class="btn primary">Valider</button>
-                
+                    
+                    <div class="form-field">
+                        </br>
+                        <button class="btn btn-success">Valider</button>
+                    </div>
+
                 </form>
             </div>
             
-    {% endblock %}
 {% endblock %}
