--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -1,7 +1,7 @@
 {% extends "_bases/base.html.twig" %}
-{% block title %}Account Profile
-{% endblock %}
+{% block title %} Account Profile {% endblock %}
 {% block content %}
+
 {% for message in app.flashes('message')%}
     <div>
         <div>
@@ -77,8 +77,8 @@
 					{{form_start(form)}}
 					<div class="card-body">
 						<div class="form-validation">
-							<form class="form-valide" method="post">
-                            					{{form_start(form)}}
+							<form class="form-valide" method="post" >
+                            					{{form_start(form, )}}
 
 								<div class="row">
 									<div class="col-xl-6">
@@ -88,6 +88,7 @@
 											</label>
 											<div class="col-lg-6">
 												{{ form_widget(form.user_username, {'attr': {'class': 'form-control'}}) }}
+												
 											</div>
 										</div>
 
@@ -171,12 +172,14 @@
 											</div>
 										</div>
 
-												<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+										<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
 										<div class="form-group row">
 											<div class="col-lg-8 ml-auto">
 												<button type="submit" class="btn btn-success">Apply Changes</button>
 											</div>
+										</div>
+										<div class="form-group row">
                                             <div class="col-lg-8 ml-auto">
 												<a class="btn btn-danger" href="{{path('app_user_editpassword')}}">Edit Password</a>
 											</div>
