--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -7,16 +7,7 @@
     <div class="container-fluid bg-light py-5">
         <div class="container py-5">
             <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="btn btn-sm border rounded-pill text-primary px-3 mb-3">Our Team</div>
-                    <h1 class="mb-4">Meet Our Experienced Team Members</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu diam
-                        amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus
-                        clita duo justo et tempor eirmod magna dolore erat amet</p>
-                    <a class="btn btn-primary rounded-pill px-4" href="">Read More</a>
-                </div>
-
-                <div class="col-lg-7">
+                <div class="col-lg-7" style="width:100%;">
                     <div class="row g-4">
                         {% for news in news %}
                             <div class="col-md-6">
@@ -33,6 +24,10 @@
                             </div>
                         {% endfor %}
                     </div>
+                </div>
+                <!-- Button to check RSS Feed -->
+                <div class="col-lg-5">
+                    <a href="{{ path('check_my_rss_feed') }}" class="btn btn-primary">Check RSS Feed</a>
                 </div>
             </div>
         </div>
