--- a/templates/_bases/base.html.twig
+++ b/templates/_bases/base.html.twig
@@ -1,91 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>
-        {% block title %}{% endblock %}
-    </title>
+		<title>
+			{% block title %}{% endblock %}
+		</title>
 
-    <!-- ================= Favicon ================== -->
-    <!-- Standard -->
-    <link
-    rel="shortcut icon" href="http://placehold.it/64.png/000/fff">
-    <!-- Retina iPad Touch Icon-->
-    <link
-    rel="apple-touch-icon" sizes="144x144" href="http://placehold.it/144.png/000/fff">
-    <!-- Retina iPhone Touch Icon-->
-    <link
-    rel="apple-touch-icon" sizes="114x114" href="http://placehold.it/114.png/000/fff">
-    <!-- Standard iPad Touch Icon-->
-    <link
-    rel="apple-touch-icon" sizes="72x72" href="http://placehold.it/72.png/000/fff">
-    <!-- Standard iPhone Touch Icon-->
-    <link rel="apple-touch-icon" sizes="57x57" href="http://placehold.it/57.png/000/fff">
-    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
-</head>
-<body>
-    <div id="main-wrapper">
+		<!-- ================= Favicon ================== -->
+		<!-- Standard -->
+		<link
+		rel="shortcut icon" href="http://placehold.it/64.png/000/fff">
+		<!-- Retina iPad Touch Icon-->
+		<link
+		rel="apple-touch-icon" sizes="144x144" href="http://placehold.it/144.png/000/fff">
+		<!-- Retina iPhone Touch Icon-->
+		<link
+		rel="apple-touch-icon" sizes="114x114" href="http://placehold.it/114.png/000/fff">
+		<!-- Standard iPad Touch Icon-->
+		<link
+		rel="apple-touch-icon" sizes="72x72" href="http://placehold.it/72.png/000/fff">
+		<!-- Standard iPhone Touch Icon-->
+		<link rel="apple-touch-icon" sizes="57x57" href="http://placehold.it/57.png/000/fff">
+		<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+	</head>
+	<body>
+		<div id="main-wrapper">
 
-        {% include 'navbar.html.twig' %}
-        <div class="content-body">
-            <div class="container-fluid">
-                <div class="row page-titles mx-0">
-                    <div class="col-sm-6 p-md-0">
-                        <div class="welcome-text">
-                            <h4>Hi, welcome back!</h4>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="javascript:void(0)">App</a></li>
-                            <li class="breadcrumb-item active"><a href="path{{'app_user'}}">Profile</a></li>
-                        </ol>
-                    </div>
-                </div>
-                {% block content %}{% endblock %}
-                {% block main %}{% endblock %}
-                <script src="vendor/global/global.min.js"></script>
-                <script src="js/quixnav-init.js"></script>
-                <script src="js/custom.min.js"></script>
-                <script src="vendor/raphael/raphael.min.js"></script>
-    <script src="vendor/morris/morris.min.js"></script>
-
-
-    <script src="vendor/circle-progress/circle-progress.min.js"></script>
-    <script src="vendor/chart.js/Chart.bundle.min.js"></script>
-
-    <script src="vendor/gaugeJS/dist/gauge.min.js"></script>
-
-    <!--  flot-chart js -->
-    <script src="vendor/flot/jquery.flot.js"></script>
-    <script src="vendor/flot/jquery.flot.resize.js"></script>
-
-    <!-- Owl Carousel -->
-    <script src="vendor/owl-carousel/js/owl.carousel.min.js"></script>
-
-    <!-- Counter Up -->
-    <script src="vendor/jqvmap/js/jquery.vmap.min.js"></script>
-    <script src="vendor/jqvmap/js/jquery.vmap.usa.js"></script>
-    <script src="vendor/jquery.counterup/jquery.counterup.min.js"></script>
+			{% include 'navbar.html.twig' %}
+			<div class="content-body">
+				<div class="container-fluid">
+					<div class="row page-titles mx-0">
+						<div class="col-sm-6 p-md-0">
+							<div class="welcome-text">
+								<h4>Hi, welcome back!</h4>
+							</div>
+						</div>
+						<div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
+							<ol class="breadcrumb">
+								<li class="breadcrumb-item">
+									<a href="javascript:void(0)">App</a>
+								</li>
+								<li class="breadcrumb-item active">
+									<a href="{{ path('app_user') }}">Profile</a>
+								</li>
+							</ol>
+						</div>
+					</div>
+					{% block content %}{% endblock %}
+					{% block main %}{% endblock %}
+					<script src="vendor/global/global.min.js"></script>
+					<script src="js/quixnav-init.js"></script>
+					<script src="js/custom.min.js"></script>
+					<script src="vendor/raphael/raphael.min.js"></script>
+					<script src="vendor/morris/morris.min.js"></script>
 
 
-    <script src="js/dashboard/dashboard-1.js"></script>
+					<script src="vendor/circle-progress/circle-progress.min.js"></script>
+					<script src="vendor/chart.js/Chart.bundle.min.js"></script>
+
+					<script src="vendor/gaugeJS/dist/gauge.min.js"></script>
+
+					<!--  flot-chart js -->
+					<script src="vendor/flot/jquery.flot.js"></script>
+					<script src="vendor/flot/jquery.flot.resize.js"></script>
+
+					<!-- Owl Carousel -->
+					<script src="vendor/owl-carousel/js/owl.carousel.min.js"></script>
+
+					<!-- Counter Up -->
+					<script src="vendor/jqvmap/js/jquery.vmap.min.js"></script>
+					<script src="vendor/jqvmap/js/jquery.vmap.usa.js"></script>
+					<script src="vendor/jquery.counterup/jquery.counterup.min.js"></script>
 
 
+					<script src="js/dashboard/dashboard-1.js"></script>
 
 
-
-
-            </div>
-        </div>
-        <div class="footer">
-                <div class="copyright">
-                    <p>Copyright © Designed &amp; Developed by <a href="#" target="_blank">The Matrix Studio</a> 2023</p>
-                </div>
-        </div>
-    </div>
-</body>
+				</div>
+			</div>
+			<div class="footer">
+				<div class="copyright">
+					<p>Copyright © Designed &amp; Developed by
+						<a href="#" target="_blank">The Matrix Studio</a>
+						2023</p>
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
