--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -9,7 +9,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hello ! ✅</h1>
 
     {% for flash_error in app.flashes('success') %}
         <div class="alert alert-success" role="alert">{{ flash_error }}</div>
