--- a/templates/project/newb.html.twig
+++ b/templates/project/newb.html.twig
@@ -3,6 +3,8 @@
 {% block title %}New Project{% endblock %}
 
 {% block body %}
+<form method="post" novalidate>
+
 <div class="container mt-5">
     <div class="card">
         <div class="card-body">
