--- a/templates/project/_form.html.twig
+++ b/templates/project/_form.html.twig
@@ -1,10 +1,10 @@
 <form method="post" novalidate>
     {{ form_start(form) }}
     
-    <div class="form-group row mb-3">
+    <div class="form-group row">
         <label for="title" class="col-sm-2 col-form-label">Title of the Project</label>
         <div class="col-sm-10">
-            {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.title, {'attr': {'class': 'form-control', 'placeholder': 'Enter project title'}}) }}
             {% if form_errors(form.title) %}
                 <div class="alert alert-danger mt-2">
                     {{ form_errors(form.title) }}
@@ -13,10 +13,10 @@
         </div>
     </div>
     
-    <div class="form-group row mb-3">
+    <div class="form-group row">
         <label for="description" class="col-sm-2 col-form-label">Description</label>
         <div class="col-sm-10">
-            {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.description, {'attr': {'class': 'form-control', 'placeholder': 'Enter project description'}}) }}
             {% if form_errors(form.description) %}
                 <div class="alert alert-danger mt-2">
                     {{ form_errors(form.description) }}
@@ -25,10 +25,10 @@
         </div>
     </div>
     
-     <div class="form-group row mb-3">
+    <div class="form-group row">
         <label for="projet_fich" class="col-sm-2 col-form-label">Project File</label>
         <div class="col-sm-10">
-            {{ form_widget(form.projet_fich, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.projet_fich, {'attr': {'class': 'form-control-file'}}) }}
             {% if form_errors(form.projet_fich) %}
                 <div class="alert alert-danger mt-2">
                     {{ form_errors(form.projet_fich) }}
@@ -37,11 +37,10 @@
         </div>
     </div>
 
-    
-    <div class="form-group row mb-3">
+    <div class="form-group row">
         <label for="categories" class="col-sm-2 col-form-label">Categories</label>
         <div class="col-sm-10">
-            {{ form_widget(form.categories, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.categories, {'attr': {'class': 'form-control', 'placeholder': 'Select categories'}}) }}
             {% if form_errors(form.categories) %}
                 <div class="alert alert-danger mt-2">
                     {{ form_errors(form.categories) }}
@@ -49,7 +48,6 @@
             {% endif %}
         </div>
     </div>
-    
     
     <div class="form-group row">
         <div class="col-sm-10 offset-sm-2">
