--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}New Project{% endblock %}
 
 {% block body %}
+<form method="post" novalidate>
+
 <div class="container mt-5">
     <div class="card">
         <div class="card-body">
@@ -12,16 +13,24 @@
                 <form method="post" enctype="multipart/form-data">
                     {{ form_start(form) }}
                     
-                    {{ form_row(form.title) }}
-                    {{ form_row(form.description) }}
-                    {{ form_row(form.categories) }}
-                    {{ form_row(form.projet_fich) }}
-                    
-                    <div class="form-group row">
-                        <div class="col-sm-10 offset-sm-2">
-                            <button type="submit" class="btn btn-primary">Create</button>
-                        </div>
+                    <div class="mb-3">
+                        {{ form_row(form.title, {'attr': {'class': 'form-control', 'placeholder': 'Enter project title'}}) }}
                     </div>
+                    
+                    <div class="mb-3">
+                        {{ form_row(form.description, {'attr': {'class': 'form-control', 'placeholder': 'Enter project description'}}) }}
+                    </div>
+                    
+                    <div class="mb-3">
+                        {{ form_row(form.categories, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                    
+                    <div class="mb-3">
+                        <label for="projet_fich" class="form-label">Project File</label>
+                        {{ form_row(form.projet_fich, {'attr': {'class': 'form-control-file'}}) }}
+                    </div>
+                    
+                    <button type="submit" class="btn btn-primary">Create</button>
                     
                     {{ form_end(form) }}
                 </form>
